@@ -345,12 +345,19 @@ For the meanings of the keyword arguments, see `gptel-make-openai'."
           (protocol "https")
           (endpoint "/v1/chat/completions")
           (models
-           '((grok-4
-              :description "Grok Flagship model"
+           '((grok-4-1-fast-reasoning
+              :description "Fast tool-calling model"
               :capabilities (tool-use json reasoning)
               :context-window 256
-              :input-cost 3
-              :output-cost 15)
+              :input-cost 0.2
+              :output-cost 0.5)
+
+             (grok-4-1-fast-non-reasoning
+              :description "Fast tool-calling model (non-reasoning)"
+              :capabilities (tool-use json)
+              :context-window 256
+              :input-cost 0.2
+              :output-cost 0.5)
 
              (grok-code-fast-1
               :description "Fast reasoning model for agentic coding"
@@ -359,19 +366,26 @@ For the meanings of the keyword arguments, see `gptel-make-openai'."
               :input-cost 0.2
               :output-cost 1.5)
 
-             (grok-3
-              :description "Grok 3"
+             (grok-4-fast-reasoning
+              :description "Fast tool-calling model"
               :capabilities (tool-use json reasoning)
-              :context-window 131
+              :context-window 256
+              :input-cost 0.2
+              :output-cost 0.5)
+
+             (grok-4-fast-non-reasoning
+              :description "Fast tool-calling model (non-reasoning)"
+              :capabilities (tool-use json)
+              :context-window 256
+              :input-cost 0.2
+              :output-cost 0.5)
+
+             (grok-4
+              :description "Grok Flagship model"
+              :capabilities (tool-use json reasoning)
+              :context-window 256
               :input-cost 3
               :output-cost 15)
-
-             (grok-3-fast
-              :description "Faster Grok 3"
-              :capabilities (tool-use json reasoning)
-              :context-window 131
-              :input-cost 5
-              :output-cost 25)
 
              (grok-3-mini
               :description "Mini Grok 3"
@@ -380,12 +394,12 @@ For the meanings of the keyword arguments, see `gptel-make-openai'."
               :input-cost 0.3
               :output-cost 0.5)
 
-             (grok-3-mini-fast
-              :description "Faster mini Grok 3"
+             (grok-3
+              :description "Grok 3"
               :capabilities (tool-use json reasoning)
-              :context-window 131072
-              :input-cost 0.6
-              :output-cost 4)
+              :context-window 131
+              :input-cost 3
+              :output-cost 15)
 
              (grok-2-vision-1212
               :description "Grok 2 Vision"
